# Hybrid-A--guided-MPPI

./: .gitignore  README.md
Fast-LIO2-Localization/: example.launch.py
Fast-LIO2-Localization/FAST_LIO/Log/: mat_pre.txt
Fast-LIO2-Localization/FAST_LIO/config/: fast_lio_relocalization_param.yaml  mid360.yaml
Fast-LIO2-Localization/FAST_LIO/launch/: mapping_icp.launch.py  mapping_lio.launch.py
Fast-LIO2-Localization/FAST_LIO/src/: laserMapping.cpp
Fast-LIO2-Localization/icp_relocalization/src/: icp_node.cpp  transform_publisher.cpp
fdilink_ahrs_ROS2/: CMakeLists.txt  package.xml
fdilink_ahrs_ROS2/launch/: ahrs_driver.launch.py
fdilink_ahrs_ROS2/src/: ahrs_driver.cpp
hunter_ros2/hunter_base/launch/: hunter_base.launch.py
hunter_ros2/hunter_description/: CMakeLists.txt  package.xml
hunter_ros2/hunter_description/urdf/: hunter_description.urdf  roas.urdf.xacro
hunter_ros2/scout_navigation/: CMakeLists.txt
hunter_ros2/scout_navigation/config/: dwa_nav2.yaml  hybrid_mppi_nav2.yaml  mppi_nav2.yaml  originala*mppi_nav2.yaml  originamppi_nav2.yaml  pp.yaml  teb_nav2.yaml
hunter_ros2/scout_navigation/include/scout_navigation/: cost_calculator.hpp  main.hpp  occmap_to_costmap.hpp  test_Astar.hpp
hunter_ros2/scout_navigation/launch/: dwa.launch.py  hybridmppi.launch.py  mppi.launch.py  pp.py  teb.launch.py
hunter_ros2/scout_navigation/rviz/: test.rviz
hunter_ros2/scout_navigation/src/: main.cpp  occmap_to_costmap.cpp
livox_ros_driver2/src/config/: HAP_config.json  MID360_config.json  mixed_HAP_MID360_config.json
navigation2/nav2_smac_planner/: CMakeLists.txt
navigation2/nav2_smac_planner/src/: a_star.cpp  analytic_expansion.cpp  node_2d.cpp  node_hybrid.cpp  node_lattice.cpp  smac_planner_2d.cpp  smac_planner_hybrid.cpp  smac_planner_lattice.cpp
pointcloud_filter/config/: custom_pointcloud_filter_config.yaml  pointcloud_filter_config.yaml
pointcloud_filter/src/: custom_pointcloud_filter_node.cpp  pointcloud_filter_node.cpp
result/: local.py  moon.py
result/hybridmoon/test1/: data.json  data.xlsx
result/hybridmoon/test10/: data.json  data.xlsx
result/hybridmoon/test2/: data.json  data.xlsx
result/hybridmoon/test3/: data.json  data.xlsx
result/hybridmoon/test4/: data.json  data.xlsx
result/hybridmoon/test5/: data.json  data.xlsx
result/hybridmoon/test6/: data.json  data.xlsx
result/hybridmoon/test7/: data.json  data.xlsx
result/hybridmoon/test8/: data.json  data.xlsx
(+120 files in other folders)
